--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,9 +7,8 @@ android {
             keyPassword project.property("MyApp.signing.alias.password")
         }
     }
-
     buildToolsVersion "27.0.3"
-    compileSdkVersion 20
+    compileSdkVersion 27
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -29,7 +28,7 @@ android {
     defaultConfig {
         applicationId "com.blackhornetworkshop.flowrush"
         minSdkVersion 15
-        targetSdkVersion 20
+        targetSdkVersion 27
     }
     buildTypes {
         release {
@@ -38,7 +37,6 @@ android {
         }
     }
 }
-
 // called every time gradle gets executed, takes the native dependencies of
 // the natives configuration, and extracts them to the proper libs/ folders
 // so they get packed with the APK.
@@ -51,12 +49,12 @@ task copyAndroidNatives() {
 
     configurations.natives.files.each { jar ->
         def outputDir = null
-        if (jar.name.endsWith("natives-arm64-v8a.jar")) outputDir = file("libs/arm64-v8a")
-        if (jar.name.endsWith("natives-armeabi-v7a.jar")) outputDir = file("libs/armeabi-v7a")
-        if (jar.name.endsWith("natives-armeabi.jar")) outputDir = file("libs/armeabi")
-        if (jar.name.endsWith("natives-x86_64.jar")) outputDir = file("libs/x86_64")
-        if (jar.name.endsWith("natives-x86.jar")) outputDir = file("libs/x86")
-        if (outputDir != null) {
+        if(jar.name.endsWith("natives-arm64-v8a.jar")) outputDir = file("libs/arm64-v8a")
+        if(jar.name.endsWith("natives-armeabi-v7a.jar")) outputDir = file("libs/armeabi-v7a")
+        if(jar.name.endsWith("natives-armeabi.jar")) outputDir = file("libs/armeabi")
+        if(jar.name.endsWith("natives-x86_64.jar")) outputDir = file("libs/x86_64")
+        if(jar.name.endsWith("natives-x86.jar")) outputDir = file("libs/x86")
+        if(outputDir != null) {
             copy {
                 from zipTree(jar)
                 into outputDir
@@ -85,8 +83,9 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.blackhornet.game/AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.blackhornetworkshop.flowrush/AndroidLauncher'
 }
+
 // sets up the Android Eclipse project, using the old Ant based build.
 eclipse {
     // need to specify Java source sets explicitly, SpringSource Gradle Eclipse plugin
@@ -103,14 +102,14 @@ eclipse {
     }
 
     classpath {
-        plusConfigurations += [project.configurations.compile]
+        plusConfigurations += [ project.configurations.compile ]
         containers 'com.android.ide.eclipse.adt.ANDROID_FRAMEWORK', 'com.android.ide.eclipse.adt.LIBRARIES'
     }
 
     project {
         name = appName + "-android"
         natures 'com.android.ide.eclipse.adt.AndroidNature'
-        buildCommands.clear();
+        buildCommands.clear()
         buildCommand "com.android.ide.eclipse.adt.ResourceManagerBuilder"
         buildCommand "com.android.ide.eclipse.adt.PreCompilerBuilder"
         buildCommand "org.eclipse.jdt.core.javabuilder"
@@ -120,18 +119,18 @@ eclipse {
 // sets up the Android Idea project, using the old Ant based build.
 idea {
     module {
-        sourceDirs += file("src");
-        scopes = [COMPILE: [plus: [project.configurations.compile]]]
+        sourceDirs += file("src")
+        scopes = [ COMPILE: [plus:[project.configurations.compile]]]
 
         iml {
             withXml {
                 def node = it.asNode()
-                def builder = NodeBuilder.newInstance();
-                builder.current = node;
+                def builder = NodeBuilder.newInstance()
+                builder.current = node
                 builder.component(name: "FacetManager") {
                     facet(type: "android", name: "Android") {
                         configuration {
-                            option(name: "UPDATE_PROPERTY_FILES", value: "true")
+                            option(name: "UPDATE_PROPERTY_FILES", value:"true")
                         }
                     }
                 }
@@ -139,9 +138,11 @@ idea {
         }
     }
 }
+
 dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.google.android.gms:play-services-games:11.8.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
 
 }
