--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.1'
     }
 }
 
@@ -16,13 +18,12 @@ allprojects {
 
     version = '1.0'
     ext {
-        appName = "FlowRush"
+        appName = "my-gdx-game"
         gdxVersion = '1.9.8'
         roboVMVersion = '2.3.1'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
-        junitVersion = '4.12'
     }
 
     repositories {
@@ -60,10 +61,11 @@ project(":android") {
 project(":core") {
     apply plugin: "java"
 
+
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-		compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        compile 'com.google.android.gms:play-services-ads:11.8.0'
+        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+
 
         testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
